RESOLVED FIXED169867
B3::LowerToAir incorrectly selects BitXor(AtomicStrongCAS(...), $1)
https://bugs.webkit.org/show_bug.cgi?id=169867
Summary B3::LowerToAir incorrectly selects BitXor(AtomicStrongCAS(...), $1)
Filip Pizlo
Reported 2017-03-19 16:14:58 PDT
It thinks that this is just like NotEqual(AtomicStrongCAS(@exp, ...), @exp). It's not. We need to teach it to only look for AtomicWeakCAS in that pattern, not any AtomicCAS.
Attachments
the patch (4.29 KB, patch)
2017-04-04 15:06 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2017-04-04 15:06:37 PDT
Created attachment 306210 [details] the patch
Filip Pizlo
Comment 2 2017-04-04 15:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.