Source/JavaScriptCore/b3/B3LowerToAir.cpp
@@ -2597,10 +2597,8 @@ private:
             // This pattern is super useful on both x86 and ARM64, since the inversion of the CAS result
             // can be done with zero cost on x86 (just flip the set from E to NE) and it's a progression
             // on ARM64 (since STX returns 0 on success, so ordinarily we have to flip it).
-            // FIXME: This looks wrong for AtomicStrongCAS
-            // https://bugs.webkit.org/show_bug.cgi?id=169867
             if (m_value->child(1)->isInt(1)
-                && isAtomicCAS(m_value->child(0)->opcode())
+                && m_value->child(0)->opcode() == AtomicWeakCAS
                 && canBeInternal(m_value->child(0))) {
                 commitInternal(m_value->child(0));
                 appendCAS(m_value->child(0), true);
